# astral-assistant

./: .gitignore  ADVANCED_FEATURES.md  IMPLEMENTATION_STATUS.md  INSTALL_PIPER.md  OLLAMA_TRAINING_GUIDE.md  PIPER_TTS_SETUP.md  README.md  UPDATE_NOTES.md  VOICE_COMMANDS.md  WHISPER_IMPLEMENTATION.md  WHISPER_SETUP.md  generate_icons.py  index.html  install-dependencies.ps1  install-gptsovits.ps1  install-piper.ps1  install-piper.sh  install-whisper.ps1  install-whisper.sh  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  whisper_api_debug.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_launcher.rs  audio_engine.rs  automation.rs  commands.rs  config.rs  elevenlabs_tts.rs  gptsovits_tts.rs  llm_provider.rs  main.rs  settings.rs  system_integration.rs  system_monitor.rs  tts_engine.rs  wake_word.rs  whisper_stt.rs
src/components/: Dashboard.tsx  HolographicNode.tsx  SystemTray.tsx
